tests/ui/const-generics/late-bound-vars/late-bound-in-where-issue-83993.stderr
error: cannot capture late-bound lifetime in constant
  --> $DIR/late-bound-in-where-issue-83993.rs:10:17
   |
LL |     for<'b> [(); {
   |         -- lifetime defined here
LL |         let x: &'b ();
   |                 ^^

error: aborting due to 1 previous error

